阻塞测试线程